force-app/main/default/objects/Job_Application__c/Job_Application__c.object-meta.xml
<CustomObject>
    <label>Job Application</label>
    <pluralLabel>Job Applications</pluralLabel>
    <nameField>
        <displayFormat>JA-{0000}</displayFormat>
        <label>Job Application ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>