force-app/main/default/objects/Job_Application__c/fields/Application_Stage__c.field-meta.xml
<CustomField>
    <fullName>Application_Stage__c</fullName>
    <label>Application Stage</label>
    <type>Picklist</type><valueSet><valueSetDefinition><sorted>false</sorted><value><fullName>Saved</fullName><default>true</default></value><value><fullName>Applied</fullName><default>false</default></value><value><fullName>Recruiter Screen</fullName><default>false</default></value><value><fullName>Interview</fullName><default>false</default></value><value><fullName>Final Round</fullName><default>false</default></value><value><fullName>Offer</fullName><default>false</default></value><value><fullName>Rejected/Withdrawn</fullName><default>false</default></value></valueSetDefinition></valueSet>
</CustomField>