force-app/main/default/objects/Job_Application__c/fields/Job_Suggestion__c.field-meta.xml
<CustomField>
    <fullName>Job_Suggestion__c</fullName>
    <label>Job Suggestion</label>
    <type>Lookup</type><referenceTo>Job_Suggestion__c</referenceTo><relationshipLabel>Job Applications</relationshipLabel><relationshipName>Job_Applications</relationshipName>
</CustomField>