force-app/main/default/objects/Job_Application__c/fields/Momentum_Score__c.field-meta.xml
<CustomField>
    <fullName>Momentum_Score__c</fullName>
    <label>Momentum Score</label>
    <type>Number</type><formula>CASE(Application_Stage__c, "Saved", 10, "Applied", 30, "Recruiter Screen", 50, "Interview", 70, "Final Round", 90, "Offer", 100, 0)</formula><formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs><precision>18</precision><scale>0</scale>
</CustomField>