force-app/main/default/objects/Job_Application__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>5</visibleLines>
</CustomField>